# homelab

./: .gitignore  .gitleaks.toml  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yml  ALERTMANAGER_INTEGRATION_SUMMARY.md  ARCHITECTURE.md  DEPLOYMENT_SUCCESS.md  INTEGRATION_SUMMARY.md  LICENSE  Makefile  README.md  SECURITY_CHANGES_SUMMARY.md  bruno.HEIC  debugger.sh  go.sh  helper.sh  kind.yaml  other.sh  ruff.toml  security.sh  start.sh
.cursor/: rules
.github/: SECURITY.md
apps/: crud.sh  examples.sql  helper.sh  load.js  skaffold.yaml
docker/: garak.Dockerfile  kubectl.Dockerfile
docs/: ARCHITECTURE.md  (+21 more)
flux/ai/agent-redteam/src/shared-lib/: pyproject.toml
flux/ai/agent-redteam/src/shared-lib/agent_optimization/: __init__.py  metrics.py
flux/ai/agent-redteam/src/shared-lib/agent_reasoning/: __init__.py
flux/ai/agent-redteam/src/shared-lib/tests/: test_gametheory.py  test_queueing.py
flux/ai/agents-whatsapp-rust/: .gitignore  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_PROOF.md  Makefile  README.md  TEST_RESULTS.md  test-structure.sh
flux/ai/agents-whatsapp-rust/agent-gateway/: Cargo.toml  Dockerfile
flux/ai/agents-whatsapp-rust/agent-gateway/src/: config.rs  handlers.rs  main.rs
flux/ai/agents-whatsapp-rust/k8s/: agent-gateway.yaml  knative-triggers.yaml  message-storage-service.yaml  messaging-service.yaml  namespace.yaml  user-service.yaml
flux/ai/agents-whatsapp-rust/k8s/base/: agent-gateway.yaml  broker-trigger.yaml  broker.yaml  kustomization.yaml  lambdaagent-message-processor.yaml  message-storage-service.yaml  messaging-service-cloudflare-ingress.yaml  messaging-service-ingress.yaml  messaging-service-loadbalancer.yaml  messaging-service.yaml  namespace.yaml  rbac.yaml  secrets-job.yaml  user-service.yaml
flux/ai/agents-whatsapp-rust/k8s/overlays/pro/: kustomization.yaml
flux/ai/agents-whatsapp-rust/k8s/overlays/studio/: kustomization.yaml
flux/ai/agents-whatsapp-rust/message-processor/: Cargo.toml  Dockerfile
flux/ai/agents-whatsapp-rust/message-processor/src/: main.rs
flux/ai/agents-whatsapp-rust/shared/: Cargo.toml
flux/ai/agents-whatsapp-rust/shared/src/: dlq.rs  errors.rs  lib.rs  models.rs  utils.rs
flux/ai/shared-tests/: README.md  pyproject.toml  requirements.txt
flux/ai/shared-tests/shared_tests/: __init__.py  conftest_template.py
flux/ai/shared-tests/shared_tests/assertions/: __init__.py  cloudevent.py  health.py  kubernetes.py  metrics.py
flux/ai/shared-tests/shared_tests/base/: __init__.py  agent.py  cloudevent.py  health.py  metrics.py
flux/ai/shared-tests/shared_tests/fixtures/: __init__.py  cloudevents.py  http.py  kubernetes.py  metrics.py  ollama.py  redis.py
flux/ai/shared-tests/tests/: __init__.py  conftest.py  test_assertions.py  test_base_classes.py  test_fixtures.py
flux/clusters/homelab/infrastructure/agent-bruno/: .gitignore  Dockerfile  IMPLEMENTATION.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  kustomization.yaml  namespace.yaml  pyproject.toml
flux/clusters/homelab/infrastructure/agent-bruno/docs/: BACKUP_SETUP.md  CICD_SETUP.md  COSTS.md  DEVOPS_REVIEW_SUMMARY.md  DEVOPS_UNBLOCK_PLAN.md  FULLSTACK_ENGINEER_REVIEW.md  FUSION_RE_RANKING.md  LANCEDB_PERSISTENCE.md  LEARNING_MEMORY_HOMEPAGE_INTEGRATION.md  MCP_WORKFLOWS.md  MEMORY.md  ML_ENGINEER_REVIEW_SUMMARY.md  MULTI_TENANCY.md  OBSERVABILITY.md  PRODUCTION_READINESS.md  PRODUCT_OWNER_REVIEW.md  QUERY_PROCESSING.md  RAG.md  RATELIMITING.md  RBAC.md  REVIEW_INDEX.md  ROADMAP.md  SESSION_MANAGEMENT.md  SLO_SETUP.md  SRE_REVIEW.md  TESTING.md
flux/clusters/homelab/infrastructure/agent-bruno/docs/fixes/: IMPLEMENTATION_CHECKLIST.md  SOURCE_CODE_TEMPLATE.md
flux/clusters/homelab/infrastructure/agent-bruno/k8s/: deployment.yaml
flux/clusters/homelab/infrastructure/agent-bruno/memory/: README.md
flux/clusters/homelab/infrastructure/agent-bruno/src/: __init__.py  main.py
flux/clusters/homelab/infrastructure/agent-bruno/src/agent/: __init__.py  core.py
flux/clusters/homelab/infrastructure/agent-bruno/src/knowledge/: __init__.py  homepage.py
flux/clusters/homelab/infrastructure/agent-bruno/src/memory/: __init__.py  manager.py  mongo_store.py  redis_store.py
flux/clusters/homelab/infrastructure/agent-bruno/tests/: __init__.py  test_agent.py
flux/clusters/homelab/infrastructure/agent-jamie/: Makefile  README.md  docker-compose.yml  kustomization.yaml  namespace.yaml  pyproject.toml  requirements.txt
flux/clusters/homelab/infrastructure/agent-jamie/src/mcp-server/: Dockerfile  core.py  jamie_mcp_server.py  k8s-mcp-server.yaml  kustomization.yaml
flux/clusters/homelab/infrastructure/agent-jamie/src/slack-bot/: core.py  jamie_slack_bot.py  k8s-slack-bot.yaml  kustomization.yaml
flux/clusters/homelab/infrastructure/agent-jamie/tests/: __init__.py  conftest.py  test_basic.py  test_core.py  test_mcp_server.py  test_slack_bot.py
flux/clusters/homelab/infrastructure/agent-sre/: ALERTMANAGER_INTEGRATION.md  AUTOMATED_INVESTIGATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICK_START_INVESTIGATIONS.md  README.md  SIFT_GUIDE.md  SIFT_IMPLEMENTATION.md  SIFT_QUICKSTART.md  TRIGGER_INVESTIGATION_GUIDE.md  docker-compose.yml  kustomization.yaml  mcp_config.json  namespace.yaml  pyproject.toml  test-alert-webhook.sh
flux/clusters/homelab/infrastructure/agent-sre/deployments/agent/: Dockerfile  agent.py  core.py  github_integration.py  investigation_workflow.py  k8s-agent.yaml  kustomization.yaml
flux/clusters/homelab/infrastructure/agent-sre/deployments/mcp-server/: Dockerfile  core.py  k8s-mcp-server.yaml  kustomization.yaml  mcp_http_wrapper.py  mcp_server.py
flux/clusters/homelab/infrastructure/agent-sre/deployments/sift/: __init__.py  analyzers.py  investigation.py  loki_client.py  sift_core.py  storage.py  tempo_client.py
flux/clusters/homelab/infrastructure/agent-sre/tests/: __init__.py  conftest.py  test_agent_core.py  test_agent_service.py  test_mcp_server.py  test_sift.py
flux/infrastructure/knative-lambda-operator/src/tests/e2e/: conftest.py  pyproject.toml  pytest.ini  qa_001_e2e_cloudevents_test.py
(+3507 files in other folders)
