[workspace]
members = [
    "shared",
    "messaging-service",
    "user-service",
    "agent-gateway",
    "message-processor",
    "message-storage-service",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Bruno Lucena <bruno@example.com>"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["util", "timeout", "load", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Database
mongodb = { version = "2.8", features = ["tokio-runtime", "bson-chrono-0_4"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CloudEvents
cloudevents-sdk = { version = "0.9", features = ["axum"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "native-tls"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# JWT
jsonwebtoken = "9.2"

# Config
config = "0.14"

# MinIO/S3
s3 = { version = "0.33", features = ["native-tls"] }

# Metrics
prometheus = "0.13"

# OpenTelemetry
opentelemetry = "0.21"
opentelemetry_sdk = "0.21"
opentelemetry-otlp = "0.14"
tracing-opentelemetry = "0.22"
