[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homelab-agent-lib"
version = "1.0.0"
description = "Shared libraries for homelab agents: optimization, domain memory, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Bruno Lucena", email = "bruno@homelab.local"}
]
keywords = [
    "agents",
    "optimization",
    "game-theory",
    "queueing-theory",
    "control-theory",
    "cloudevents",
    "kubernetes",
    "domain-memory",
    "stateful-agents",
    "ai-memory",
    "observability",
    "tracing",
    "inter-agent-communication"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "prometheus-client>=0.17.0",
    "structlog>=23.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
redis = [
    "redis>=5.0.0",
]
postgres = [
    "asyncpg>=0.29.0",
]
memory = [
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]

dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/brunovlucena/homelab"
Documentation = "https://github.com/brunovlucena/homelab/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_optimization*", "agent_memory*", "agent_communication*", "observability*", "macos_automation*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
