[project]
name = "knative-lambda-e2e-tests"
version = "0.1.0"
description = "End-to-end tests for Knative Lambda service"
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "requests>=2.31.0",
    "kubernetes>=27.2.0",
    "boto3>=1.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

